fix(your apps):  PM2-1450 add card title to align center (#188)

--- a/src/components/styles/_theme-overrides.scss
+++ b/src/components/styles/_theme-overrides.scss
@@ -1963,13 +1963,19 @@ p.MuiTypography-root.MuiTypography-body3.description,
   }
 }
 
-
 // app overview
+.appOverview-app .app-main .app-detail {
+  .cx-card__add-service--title,
+  .cx-card__add-service--title .cx-typography {
+    text-align: center;
+  }
+}
+
 .app-main {
   .overview-section {
     .cx-page-info {
       margin: 20px auto;
-      &__title{
+      &__title {
         margin-top: 40px;
       }
     }
